[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-vc"
version = "0.0.0"
description = "Seed-VC wrapper for Deep-Live-Cam backend"
authors = [{name = "thekindest"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "pydub",
    "librosa",
    "soundfile",
    "huggingface_hub",
    "numpy",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
py-modules = ["seed_vc_wrapper", "hf_utils", "optimizers"]
